--- a/cpp00/ex02/Makefile
+++ b/cpp00/ex02/Makefile
@@ -1,13 +1,13 @@
 NAME = Account
 SRC = Account.cpp tests.cpp
-FLAGS = -Wall -Wextra -Werror
+FLAGS = -Wall -Wextra -Werror -std=c++98
 OBJ = $(SRC:.cpp=.o)
 
 all: $(NAME)
 
 $(NAME): $(OBJ)
 	c++ $(FLAGS) $(OBJ) -o $(NAME)
-%.o: %.cpp
+%.o: %.cpp Account.hpp
 	c++ $(FLAGS) -c $<
 clean:
 	rm -f $(OBJ)
