--- a/cpp01/ex01/Makefile
+++ b/cpp01/ex01/Makefile
@@ -1,15 +1,15 @@
-NAME = PhoneBook
-SRC = PhoneBook.cpp
-FLAGS = -Wall -Wextra -Werror -std=c++98
+NAME = zombie
+SRC = main.cpp Zombie.cpp zombieHorde.cpp
+FLAGS = 
 OBJ = $(SRC:.cpp=.o)
 
 all: $(NAME)
 
 $(NAME): $(OBJ)
 	c++ $(FLAGS) $(OBJ) -o $(NAME)
-%.o: %.cpp
+%.o: %.cpp Zombie.hpp
 	c++ $(FLAGS) -c $<
-clean:
+clean: 
 	rm -f $(OBJ)
 fclean: clean
 	rm -f $(NAME)
