--- a/cpp00/ex00/Makefile
+++ b/cpp00/ex00/Makefile
@@ -1,6 +1,6 @@
 NAME = megaphone
 SRC = megaphone.cpp
-FLAGS = -Wall -Wextra -Werror
+FLAGS = -Wall -Wextra -Werror -std=c++98
 OBJ = $(SRC:.cpp=.o)
 
 all: $(NAME)
