--- a/cpp01/ex00/Makefile
+++ b/cpp01/ex00/Makefile
@@ -1,5 +1,5 @@
-NAME = PhoneBook
-SRC = PhoneBook.cpp
+NAME = zombie
+SRC = main.cpp newZombie.cpp randomChump.cpp Zombie.cpp
 FLAGS = -Wall -Wextra -Werror -std=c++98
 OBJ = $(SRC:.cpp=.o)
 
@@ -7,9 +7,9 @@ all: $(NAME)
 
 $(NAME): $(OBJ)
 	c++ $(FLAGS) $(OBJ) -o $(NAME)
-%.o: %.cpp
+%.o: %.cpp Zombie.hpp
 	c++ $(FLAGS) -c $<
-clean:
+clean: 
 	rm -f $(OBJ)
 fclean: clean
 	rm -f $(NAME)
