--- a/cpp01/ex06/Makefile
+++ b/cpp01/ex06/Makefile
@@ -1,5 +1,5 @@
-NAME = zombie
-SRC = main.cpp Zombie.cpp zombieHorde.cpp
+NAME = harlFilter
+SRC = main.cpp Harl.cpp
 FLAGS = -Wall -Wextra -Werror -std=c++98
 OBJ = $(SRC:.cpp=.o)
 
@@ -7,7 +7,7 @@ all: $(NAME)
 
 $(NAME): $(OBJ)
 	c++ $(FLAGS) $(OBJ) -o $(NAME)
-%.o: %.cpp Zombie.hpp
+%.o: %.cpp Harl.hpp
 	c++ $(FLAGS) -c $<
 clean: 
 	rm -f $(OBJ)
