--- a/cpp02/ex02/Makefile
+++ b/cpp02/ex02/Makefile
@@ -1,5 +1,5 @@
-NAME = zombie
-SRC = main.cpp Zombie.cpp zombieHorde.cpp
+NAME = fixed
+SRC = main.cpp Fixed.cpp
 FLAGS = -Wall -Wextra -Werror -std=c++98
 OBJ = $(SRC:.cpp=.o)
 
@@ -7,8 +7,10 @@ all: $(NAME)
 
 $(NAME): $(OBJ)
 	c++ $(FLAGS) $(OBJ) -o $(NAME)
-%.o: %.cpp Zombie.hpp
+
+%.o: %.cpp Fixed.hpp
 	c++ $(FLAGS) -c $<
+
 clean: 
 	rm -f $(OBJ)
 fclean: clean
