--- a/cpp03/ex03/Makefile
+++ b/cpp03/ex03/Makefile
@@ -8,7 +8,7 @@ all: $(NAME)
 $(NAME): $(OBJ)
 	c++ $(FLAGS) $(OBJ) -o $(NAME)
 
-%.o: %.cpp ClapTrap.hpp ScavTrap.hpp DiamondTrap.hpp
+%.o: %.cpp ClapTrap.hpp ScavTrap.hpp DiamondTrap.hpp FragTrap.hpp
 	c++ $(FLAGS) -c $<
 
 clean: 
