--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,7 +74,10 @@
     "stack": "cpp",
     "__functional_03": "cpp",
     "filesystem": "cpp",
-    "__functional_base_03": "cpp"
+    "__functional_base_03": "cpp",
+    "map": "cpp",
+    "list": "cpp",
+    "queue": "cpp"
   },
   "C_Cpp.errorSquiggles": "disabled"
 }
