--- a/cpp07/ex01/Makefile
+++ b/cpp07/ex01/Makefile
@@ -1,7 +1,7 @@
 NAME = Iter
 SRC = main.cpp 
 HEADERS = iter.hpp
-FLAGS = -Wall -Wextra -std=c++98
+FLAGS = -Wall -Wextra -Werror -std=c++98
 OBJ = $(SRC:.cpp=.o)
 all: $(NAME)
 
