--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,7 +77,13 @@
     "__functional_base_03": "cpp",
     "map": "cpp",
     "list": "cpp",
-    "queue": "cpp"
+    "queue": "cpp",
+    "charconv": "cpp",
+    "format": "cpp",
+    "span": "cpp",
+    "text_encoding": "cpp",
+    "cinttypes": "cpp",
+    "variant": "cpp"
   },
   "C_Cpp.errorSquiggles": "disabled"
 }
